# graph-visualizer

./: README.md  install.bat  install.sh  reinstall.bat  reinstall.sh  run.bat  run.sh  venv.bat  venv.sh
api/: pyproject.toml
api/visualizer/api/exception/: data_source_exception.py  node_exception.py
api/visualizer/api/model/: edge.py  graph.py  node.py
api/visualizer/api/service/: data_source_plugin.py  plugin.py  visualizer_plugin.py
api/visualizer/api/static/: event_bus.js
block_visualizer/: pyproject.toml
block_visualizer/visualizer/plugin/: block_visualizer.py
block_visualizer/visualizer/plugin/templates/: block_visualizer_body_template.html  block_visualizer_head_template.html
complex_visualizer/: pyproject.toml
core/: pyproject.toml
core/visualizer/core/cli/: command_parser.py  repl.py
core/visualizer/core/cli/exception/: parser_exception.py
core/visualizer/core/command/: __init__.py  command.py  command_result.py
core/visualizer/core/command/edge/: create_edge_command.py  delete_edge_command.py  edit_edge_command.py
core/visualizer/core/command/exception/: parser_exception.py
core/visualizer/core/command/general/: clear_command.py  filter_command.py  search_command.py
core/visualizer/core/command/node/: create_node_command.py  delete_node_command.py  edit_node_command.py
core/visualizer/core/platform/: platform.py  workspace.py
core/visualizer/core/service/: command_service.py  plugin_service.py
core/visualizer/core/templates/: app_header_template.html  bird_view_body_template.html  bird_view_head_template.html  main_view_body_template.html  main_view_head_template.html  main_view_template.html  tree_view_body_template.html  tree_view_head_template.html
core/visualizer/core/test/: test_edge_command.py  test_node_command.py
core/visualizer/core/usecase/: event_bus.py  graph_manager.py  graph_util.py  plugin_manager.py
core/visualizer/core/usecase/command/: command.py
core/visualizer/core/usecase/command/edge/: create_edge_command.py
core/visualizer/core/usecase/command/exception/: parser_exception.py
core/visualizer/core/usecase/command/general/: clear_command.py
core/visualizer/core/usecase/command/node/: create_node_command.py  delete_node_command.py  edit_node_command.py
core/visualizer/core/util/: compare_util.py
core/visualizer/core/view/: app_header_view.py  bird_view.py  main_view.py  tree_view.py
data/json/: big_cyclic_data.json  filter_example.json  name_as_id.json  name_ref.json  readme_example.json  small_cyclic_data.json  small_forest_data.json  undirected_graph.json
data/python/: big_example.py  class_example.py  small_example.py
data/rdf/: dense_graph.ttl  example1.ttl.txt  people.ttl.txt  test_random01.txt  test_random02.txt
graph_explorer/: pyproject.toml
graph_explorer/graph_explorer/: apps.py  settings.py  urls.py  views.py
graph_explorer/graph_explorer/static/: style.css
graph_explorer/graph_explorer/templates/: base.html  cli_output.html  index.html
json_loader/: config.json  pyproject.toml
json_loader/visualizer/command/: json_config.py
json_loader/visualizer/plugin/: json_loader.py
python_loader/: pyproject.toml
python_loader/visualizer/plugin/: code_visitor.py  python_loader.py
rdf_loader/: pyproject.toml
rdf_loader/visualizer/plugin/: rdf_loader.py
simple_visualizer/: pyproject.toml
simple_visualizer/visualizer/plugin/: simple_visualizer.py
simple_visualizer/visualizer/plugin/templates/: simple_visualizer_body_template.html  simple_visualizer_head_template.html
