[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "block-visualizer"
version = "0.0.1"
description = "Block visualizer"
dependencies = [
    "graph-visualizer-api==0.1.1",
    "jinja2==3.1.4"
]

[project.entry-points."visualizer.visualizer"]
block_visualizer = "visualizer.plugin.block_visualizer:BlockVisualizer"