[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_Loader"
version = "0.0.1"
description = "Python loader"
dependencies = [
    "graph-visualizer-api==0.1.0",
]


[tool.setuptools]
provides = ["visualizer.plugin"]

[project.entry-points."visualizer.datasource"]
datasource_python = "visualizer.plugin.python_loader:PythonLoader"
