[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf_Loader"
version = "0.0.1"
description = "RDF loader"
dependencies = [
    "graph-visualizer-api==0.1.1",
    "rdflib>=6.0.0",
    "typing-extensions>=4.0.0"
]


[tool.setuptools]
provides = ["visualizer.plugin"]

[project.entry-points."visualizer.datasource"]
datasource_rdf = "visualizer.plugin.rdf_loader:RDFLoader"
