[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-visualizer"
version = "0.0.1"
description = "Simple visualizer"
dependencies = [
    "graph-visualizer-api==0.1.0",
    "jinja2==3.1.4"
]

[project.entry-points."visualizer.visualizer"]
simple_visualizer = "visualizer.plugin.simple_visualizer:SimpleVisualizer"